增加一个测试界面，方便插数据进去

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+    <details>
+        <summary>部门</summary>
+        <p>部长:13131571589</p>
+    </details>
 </body>
 </html>
